tests/error/pointer_outside_class.gw
#! [contains] can only be used at class scope
funptr static void my_fun();
